erDiagram
  REPAIR_BRANCHES ||--o{ REPAIR_JOBS : receives
  CUSTOMERS ||--o{ REPAIR_JOBS : owns
  EMPLOYEES ||--o{ REPAIR_JOBS : assigned_technician
  REPAIR_JOBS ||--o{ REPAIR_JOB_SPARE_PART_REQUESTS : requests
  REPAIR_JOBS ||--o{ REPAIR_SPARE_ISSUES : consumes
  REPAIR_JOBS ||--o{ REPAIR_PAYMENTS : paid_by
  REPAIR_JOBS ||--o| REPAIR_SALES_INVOICES : invoiced
  REPAIR_BRANCHES ||--o{ REPAIR_TREASURY_SESSIONS : operates
  REPAIR_TREASURY_SESSIONS ||--o{ REPAIR_TREASURY_ENTRIES : contains
  REPAIR_SPARE_PARTS ||--o{ REPAIR_PARTS_TRANSACTIONS : moved_by
  REPAIR_BRANCHES ||--o{ REPAIR_PM_PLANS : schedules
  REPAIR_PM_PLANS ||--o{ REPAIR_JOBS : generates
  REPAIR_JOBS ||--o{ REPAIR_COMPLAINTS : may_have
